# cdk-uv-lambda-bundle-example

./: .gitignore  .lintstagedrc.yaml  biome.json  cdk.json  note.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
lib/: cdk-app-stack.ts  uv-python-lambda.construct.ts
python-lambda/hello-world/: .dockerignore  Dockerfile  README.md  index.py  pyproject.toml
python-lambda/hello-world-with-layer/: dependencies-layer.Dockerfile  index.py  pyproject.toml
python-lambda/hello-world-with-layer/src/: example.py
python-lambda/hello-world/lib/: schemas.py
test/: cdk-app.test.ts  snapshot.test.ts
test/__snapshots__/: snapshot.test.ts.snap
